--- a/themes/hexo-theme-matery/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/footer.ejs
@@ -2,7 +2,8 @@
     <div class="container row center-align">
         <div class="col s12 m8 l8 copy-right">
             <a href="https://hexo.io/" target="_blank">Hexo</a>&nbsp;[]~(￣▽￣)~*
-            <a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>&nbsp;
+            <a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>
+            <br>
             <% let socialClass = '' %>
             <% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
             <% socialClass = 'social-statis' %>
