--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -163,11 +163,11 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background-image: linear-gradient(to right, #2177b8 0%, #126bae 100%);
 }
 
 .text-color {
-    color: #0f9d58 !important;
+    color: #126bae !important;
 }
 
 .white-color {
@@ -179,7 +179,7 @@ mark {
     position: fixed;
     bottom: 0;
     z-index: 300;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background: linear-gradient(to right, #2177b8 0%, #126bae 100%);
     opacity: 0.8;
 }
 
@@ -1090,7 +1090,7 @@ table tr:nth-child(2n), thead {
 
 .chip-container .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%) !important;
+    background: linear-gradient(to right, #2177b8 0%, #126bae 100%) !important;
 }
 
 .chip .tag-length {
@@ -1165,7 +1165,7 @@ table tr:nth-child(2n), thead {
     left: 18px;
     height: 100%;
     width: 4px;
-    background: #0f9d58;
+    background: #126bae;
 }
 
 @media only screen and (min-width: 900px) {
@@ -1401,8 +1401,8 @@ table tr:nth-child(2n), thead {
     margin: 0 0.5rem;
     padding: 0;
     color: #fff;
-    border: 1px solid #0f9d58;
-    background: radial-gradient(#4cbf30, #0f9d58);;
+    border: 1px solid #126bae;
+    background: radial-gradient(#2177b8, #126bae);;
     font-size: 0.9rem;
     border-radius: 50%;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .21), 0 2px 3px rgba(0, 0, 0, .1);
@@ -1577,8 +1577,8 @@ table tr:nth-child(2n), thead {
 
 .other-skills .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);;
-    border: 1px solid #4cbf30;
+    background: linear-gradient(to right, #2177b8 0%, #126bae 100%);;
+    border: 1px solid #2177b8;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25)
 }
 
