--- a/themes/hexo-theme-matery/layout/_partial/post-detail-toc.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/post-detail-toc.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="<%- theme.libs.css.tocbot %>">
+<link rel="stylesheet" href="<%- theme.jsDelivr.url %><%- url_for(theme.libs.css.tocbot) %>">
 <style>
     #articleContent h1::before,
     #articleContent h2::before,
@@ -62,6 +62,14 @@
     #toc-content .toc-link::before {
         background-color: transparent;
         max-height: 25px;
+
+        position: absolute;
+        right: 23.5vw;
+        display: block;
+    }
+
+    .toc-fixed .toc-link::before{
+        position: fixed!important;/*当toc的位置改为fixed时，.toc-link::before也要改为fixed*/
     }
 
     #toc-content .is-active-link {
@@ -112,7 +120,7 @@
 </div>
 <% } %>
 
-<script src="<%- theme.libs.js.tocbot %>"></script>
+<script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.tocbot) %>"></script>
 <script>
     $(function () {
         tocbot.init({
